CE manual update plus misc training fixes

--- a/manuals.html
+++ b/manuals.html
@@ -68,15 +68,15 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-2l">ABX-2L-V2</a><br></td>
                 <td>AUTOBOX ABX-2L-V2<br>Automated system for dual flex lancing of exchanger tube IDs</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 602-V2</a><br><small class="grey">Updated: 10/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 602-V2</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-2L_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 07/2018</small></td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L_Belt_Installation.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
               </tr>
               <tr>
                 <td><a href="/abx-3l">ABX-3L-V2</a><br></td>
                 <td>AUTOBOX ABX-3L-V2<br>Automated system for triple flex lancing of exchanger tube IDs</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 630</a><br><small class="grey">Updated: 12/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 630</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2018</small></td>
                 <td class="text-center"></td>
@@ -84,7 +84,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-500">ABX-500-V2</a></td>
                 <td>AUTOBOX ABX-500-V2<br>Automated hose control device for high pressure pipe and vessel cleaning</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-500_manual.pdf" target="_blank" class="btn btn-sm">PL 596-V2</a><br><small class="grey">Updated: 12/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-500_manual.pdf" target="_blank" class="btn btn-sm">PL 596-V2</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-500_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-500_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 07/2017</small></td>
                 <td class="text-center"></td>
@@ -92,7 +92,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-pro">ABX-PRO</a></td>
                 <td>AUTOBOX ABX-PRO<br>Hose drive for small pipe cleaning, sometimes referred to as PRODRIVE</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 08/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2017</small></td>
                 <td class="text-center"></td>
@@ -108,7 +108,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/autostroke">AST-200-V2</a></td>
                 <td>AUTOSTROKE<br>For use with AutoBox hose tractors</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/AST-200-V2_Manual.pdf" target="_blank" class="btn btn-sm">PL 629</a><br><small class="grey">Updated: 09/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/AST-200-V2_Manual.pdf" target="_blank" class="btn btn-sm">PL 629</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/AST_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/AST-tool-talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2017</small></td>
                 <td class="text-center"></td>
@@ -252,7 +252,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/rigid-lance-machine">BRLM-500</a></td>
                 <td>RIGID LANCE MACHINE<br>Rigid lancing system for exchanger tube cleaning</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BRLM_Manual.pdf" target="_blank" class="btn btn-sm">PL 665</a><br><small class="grey">Updated: 06/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/LP-300_Manual.pdf" target="_blank" class="btn btn-sm">PL 665</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BRLM_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 10/2018</small></td>
                 <td class="text-center"><a href="/assets/pdf/reference/Lancing_System_Assembly_Instructions.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
@@ -266,9 +266,9 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/boiler-tube-cleaner">BTC-100</a></td>
+                <td><a href="/boiler-tube-cleaner">BTC-200</a></td>
                 <td>BOILER TUBE CLEANER<br>No-entry process boiler cleaning system</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BTC-100_manual.pdf" target="_blank" class="btn btn-sm">PL 614</a><br><small class="grey">Updated: 04/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BTC-200_manual.pdf" target="_blank" class="btn btn-sm">PL 614</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/BTC-100_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -276,7 +276,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-500">CB-ABX</a></td>
                 <td>AUTOBOX CB-ABX<br>Control Box for AutoBox product family (ABX-500, ABX-2L)</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank" class="btn btn-sm">PL 611</a><br><small class="grey">Updated: 07/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank" class="btn btn-sm">PL 611</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -284,7 +284,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-pro">CB-ABX-PRO</a></td>
                 <td>AUTOBOX CB-ABX-PRO<br>Control Box for AutoBox ABX-PRO</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/CB-ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 624</a><br><small class="grey">Updated: 07/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/CB-ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 624</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -357,7 +357,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/lightweight-positioner">LWP-500-V2</a></td>
                 <td>LIGHTWEIGHT POSITIONER<br>For AutoBox ABX-2L exchanger cleaning/tube indexing</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 610-V2</a><br><small class="grey">Updated: 04/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/LWP-500-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 610-V2</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -365,7 +365,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/navigator">NAV-100</a></td>
                 <td>NAVIGATOR<br>Hose rotation for cleaning small process pipe with bends</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/NAV-100_manual.pdf" target="_blank" class="btn btn-sm">PL 613</a><br><small class="grey">Updated: 06/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/NAV-100_manual.pdf" target="_blank" class="btn btn-sm">PL 613</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/NAV_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/NAV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 04/2017</small></td>
                 <td class="text-center"></td>
@@ -500,10 +500,18 @@ permalink: /manuals
               </tr>
               <tr>
                 <td><a href="/striker">SKR-100</a></td>
-                <td>STRIKER<br>Remote shotgunning system - Quick Start Guide available</td>
+                <td>STRIKER<br>Remote shotgunning system </td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SKR_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 08/2017</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/SKR_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/SKR_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 10/2016</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/striker">SKRL</a></td>
+                <td>LIGHTWEIGHT STRIKER<br>Remote shotgunning system </td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SKRL_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 03/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/data-sheets/striker_skrl_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/striker_skrl_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 06/2017</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
