--- a/training.html
+++ b/training.html
@@ -102,6 +102,10 @@ permalink: /training
           <a href="https://www.waterjetting.org.uk/training/" target="_blank"><img src="/assets/img/logo-wja.png" style="width:180px;" alt="WJA logo" class="margin-top-30" /></a>
         </div>
       </div>
+      <div class="row">
+        <hr>
+        <h5 style="text-transform: uppercase; font-weight: 300; letter-spacing: 1px;"><a href="/terms-training"><i class="fa fa-chevron-circle-right"></i> Review terms and conditions of training</a></h5>
+      </div>
     </div>
   </section>
   <!-- End Course descriptions -->
