--- a/warranty-dh.html
+++ b/warranty-dh.html
@@ -17,6 +17,7 @@ permalink: /warranty-dh
       <div class="col-sm-7 padding-tb-30">
         <h4>Warranties set forth herein extend only to End-Users, meaning customers acquiring, or that have previously acquired, a product manufactured by StoneAge (“Product”) for their own use and not for resale, either directly from StoneAge Inc. (“StoneAge”) or from a StoneAge Authorized Dealer or Reseller (“Dealer”). No warranty of any kind or nature is made by StoneAge beyond those expressly stated herein.</h4>
         <h3><a href="/terms"><i class="fa fa-chevron-circle-right"></i> Review Terms &amp; Conditions of Sale</a></h3>
+        <h3><a href="/terms-training"><i class="fa fa-chevron-circle-right"></i> Review terms for StoneAge Training</a></h3>
         <h3><a href="/warranty"><i class="fa fa-chevron-circle-right"></i> Review warranty for waterblast and sewer tools</a></h3>
       </div>
     </div>
