--- a/warranty.html
+++ b/warranty.html
@@ -17,6 +17,7 @@ permalink: /warranty
       <div class="col-sm-7 padding-tb-30">
         <h4>Warranties set forth herein extend only to End-Users, meaning customers acquiring, or that have previously acquired, a product manufactured by StoneAge (“Product”) for their own use and not for resale, either directly from StoneAge Inc. (“StoneAge”) or from a StoneAge Authorized Dealer or Reseller (“Dealer”).  No warranty of any kind or nature is made by StoneAge beyond those expressly stated herein.</h4>
         <h3><a href="/terms"><i class="fa fa-chevron-circle-right"></i> Review Terms &amp; Conditions of Sale</a></h3>
+        <h3><a href="/terms-training"><i class="fa fa-chevron-circle-right"></i> Review terms for StoneAge Training</a></h3>
         <h3><a href="/warranty-dh"><i class="fa fa-chevron-circle-right"></i> Review Warranty for SpinCat and Downhole Tools</a></h3>
       </div>
     </div>
@@ -40,7 +41,7 @@ permalink: /warranty
       <div class="row" id="period">
         <div class="col-sm-7 term small">
           <h2>Limited warranty period</h2>
-          <p>Subject to the limitations and conditions hereinafter set forth, StoneAge warrants its Product to be free from defects in workmanship and material for a period of one (1) year from the date of purchase by the End-User, provided that the end of the limited warranty period shall not be later than eighteen (18) months from the date of shipment of the Product to the Dealer or the End-User by StoneAge (“Limited Warranty Period”).  All replacement parts which are furnished under this Limited Warranty and properly installed shall be warranted to the same extent as the original Product under this Limited Warranty if, and only if, the original parts were found to be defective within the original Limited Warranty Period covering the original Product.  Replacement parts are warranted for the remainder of the original Limited Warranty Period.  This Limited Warranty does not cover any component part of any Product not manufactured by StoneAge.  Any such component part is subject exclusively to the component manufacturer’s warranty terms and conditions.</p>
+          <p>Subject to the limitations and conditions hereinafter set forth, StoneAge warrants its Product to be free from defects in workmanship and material for a period of one (1) year from the date of purchase by the End-User, provided that the end of the limited warranty period shall not be later than eighteen (18) months from the date of shipment of the Product to the Dealer or the End-User by StoneAge (“Limited Warranty Period”).  All replacement parts which are furnished under this Limited Warranty and properly installed shall be warranted to the same extent as the original Product under this Limited Warranty if, and only if, the original parts were found to be defective within the original Limited Warranty Period covering the original Product.  Replacement parts are warranted for the remainder of the original Limited Warranty Period.  This Limited Warranty does not cover any component part of any Product not manufactured by StoneAge.  Any such component part is subject exclusively to the component manufacturer’s warranty terms and conditions.</p>
         </div>
       </div>
       <div class="row" id="coverage">
@@ -57,7 +58,7 @@ permalink: /warranty
       <div class="row" id="providers">
         <div class="col-sm-7 term small">
           <h2>Warranty service providers</h2>
-          <p>Service and repair of the Product is to be performed only by StoneAge authorized service representatives, including Dealers who are authorized repair centers, with StoneAge approved parts.  Information about StoneAge authorized service representatives can be obtained through the StoneAge website at www.stoneagetools.com/service.  Unauthorized service, repair or modification of the Product or use of parts not approved by StoneAge will void this Limited Warranty.  StoneAge reserves the right to change or improve the material and design of the Product at any time without notice to End-User, and StoneAge is not obligated to make the same improvements during warranty service to any Product previously manufactured.</p>
+          <p>Service and repair of the Product is to be performed only by StoneAge authorized service representatives, including Dealers who are authorized repair centers, with StoneAge approved parts.  Information about StoneAge authorized service representatives can be obtained through the StoneAge website at <a href="/service">www.stoneagetools.com/service</a>.  Unauthorized service, repair or modification of the Product or use of parts not approved by StoneAge will void this Limited Warranty.  StoneAge reserves the right to change or improve the material and design of the Product at any time without notice to End-User, and StoneAge is not obligated to make the same improvements during warranty service to any Product previously manufactured.</p>
         </div>
         <div class="col-md-1">
           <a href="#top" title="To Top">
