--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -273,7 +273,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/BRLM_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BRLM User Manual</a> <em class="small grey">(Includes LP-300 and ABX-LP)</em></li>
+            <li><a href="/assets/pdf/manuals/LP-300_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;LP-300/BRLM User Manual</a> <em class="small grey">(Includes LP-300 and ABX-LP)</em></li>
           </ul>
         </div>
         <div class="col-sm-4">
